--- a/src/components/Stepper.module.css
+++ b/src/components/Stepper.module.css
@@ -47,6 +47,11 @@
   opacity: 0.5;
 }
 
+.btn:focus-visible {
+  outline: 2px solid var(--accent);
+  outline-offset: 3px;
+}
+
 .value {
   width: 30px;
   text-align: center;
